# MammaMia

./: .gitignore  BIO-Carbon.py  LICENSE  README.md  Rapid_Array_Virtual_Mooring_Campaign.ipynb  STAC_search.py  arctic_visual.py  campaign_test.py  catalog.yml  catalog_test.py  collection.json  create_curve_blender.py  demo.py  dvr_test.py  environment.yml  example.py  flight2.py  gebco.blend1  gebco_with_track.blend1  msm_world.vs3  parcels_argo.py  platforms.json  pyproject.toml  sensors.json  simulator_test.py  test.py  to_csv.py  to_netcdf.py  traj_to_csv.py  vr_test.py  waypoints.geojson
.github/workflows/: paper-pdf.yml
data/RAPID-mooring/mafiles/: yo10.ma
data/RAPID-mooring2/mafiles/: goto_l10.ma
data/RAPID-mooring_spiral/missions/: rapid-mooring_spiral.mi
data/waypoints/mafiles/: goto_l10.ma
data/waypoints2/mafiles/: goto_l10.ma
docs/: Installation.md  Introduction.html  _config.yml  _quarto.yml  about.html  acknowledgement.html  campaign.md  index.html  index.md  index.qmd  installation.html  introduction.html  inventory.md  mamma-mia.html  missions.md  search.json  simulators.html  simulators.md
docs/docs/: index.html
docs/site_libs/bootstrap/: bootstrap-071cd578721d2f31d2048fc3f2aedd83.min.css  bootstrap-7c7658f95fcbed27ad0db9a764384cec.min.css  bootstrap-f7db7404ca9284ebc98b59858c633676.min.css
model.zarr/: .zattrs
paper/: paper.md
sandbox/: GEBCO.vs3  auv.py  catalog.json  catalog.yml  cmems.glb  cmems_world_phy.nc.aux.xml  cmems_world_phy.txt  colored_output.gltf  data_loggers.py  example_usage.py  mm_jas.py  particles_dcp_static.nc.aux.xml  realities.py  temperature.json  test.py  to_Geojson.py  to_KeplerGL.py  to_csv.py  to_netcdf.py  track.csv  world.py
src/mamma_mia/: __init__.py  auv.py  campaign.py  catalog.py  catalog.yml  data_loggers.py  density_velocity_world.py  exceptions.py  find_worlds.py  get_worlds.py  glider.py  gsw_funcs.py  interpolator.py  inventory.py  log.py  mission.py  mission_builder.py  mm_jas.py  parameters.json  parameters.py  platforms.json  platforms.py  realities.py  run_simulator.py  sensors.json  sensors.py  sim_error.py  trajectory.py  util.py  velocity_world.py  world.py  worlds.py
src/mamma_mia/inventory/: parameters.json  sensors.json
src/mission/: __init__.py  alias.py  auv.py  catalog.yml  flight.py  glider.py  mission.py  mm_jas.py  model.py  realities.py  sensors.py  trajectory.py  video.py  world.py  worlds.py
website/: AEROSTATS_M16a.Rproj  _quarto.yml  index.qmd  installation.qmd  introduction.qmd  mamma-mia.qmd  simulators.qmd
