[project]
name = "mamma_mia"
version = "0.3.0"
authors = [
  { name="thopri", email="thopri@noc.ac.uk" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/NOC-MDP/MammaMia"
Issues = "https://github.com/NOC-MDP/MammaMia/issues"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mamma_mia = ["*.json"]