[project]
name = "mamma-mia"
version = "0.3.0"
authors = [
  { name="thopri", email="thopri@noc.ac.uk" },
]
description = ""
readme = "README.md"
requires-python = "==3.11.*"
dependencies = ["loguru==0.7.*",
                "pyinterp==2024.6.*",
                "cattrs==24.1.*",
                "xarray==2024.7.*",
                "pyyaml==6.0.*",
                "zarr==2.18.*",
                "plotly==5.24.*",
                "intake==2.0.*",
                "intake-xarray==0.7.*",
                "copernicusmarine==2.1.*",
                "s3fs==2024.6.*",
                "blosc==1.11.*",
                "gsw==3.6.*",
                "xesmf@git+https://github.com/pangeo-data/xesmf.git",
                "glidersim@git+https://github.com/NOC-MDP/glidersim",
                "latlon@git+https://github.com/NOC-MDP/latlon",
                "GliderNetCDF@git+https://github.com/NOC-MDP/GliderNetCDF"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/NOC-MDP/MammaMia"
Issues = "https://github.com/NOC-MDP/MammaMia/issues"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mamma_mia = ["*.json"]