# Copyright 2025 National Oceanography Centre
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#  http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "mamma-mia"
version = "0.3.0"
authors = [
  { name="thopri", email="thopri@noc.ac.uk" },
]
description = ""
readme = "README.md"
requires-python = "==3.11.*"
dependencies = ["loguru==0.7.*",
                "pyinterp==2024.6.*",
                "cattrs==24.1.*",
                "xarray>=2025.1.2",
                "pyyaml>=6.0.3",
                "zarr>=3.1.3",
                "plotly>=5.24.1",
                "copernicusmarine>=2.1.3",
                "s3fs>=2025.3.0",
                "blosc>=1.11.3",
                "gsw>=3.6.20",
                "numpy>=2.2.3",
                "xesmf@git+https://github.com/pangeo-data/xesmf.git",
#                "glidersim@git+https://github.com/NOC-MDP/glidersim",
                "latlon@git+https://github.com/NOC-MDP/latlon",
#                "GliderNetCDF@git+https://github.com/NOC-MDP/GliderNetCDF",
                "OceanDataStore@git+https://github.com/NOC-MSM/OceanDataStore@v0.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/NOC-MDP/MammaMia"
Issues = "https://github.com/NOC-MDP/MammaMia/issues"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mamma_mia = ["*.json"]